# overmind

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  index.html  overmind.cmd  overmind.py
msvc/: sleep-server.sln  sleep-server.vcxproj  sleep-server.vcxproj.filters
src/: Overmind.cpp  main.rs  mongoose.c  sleep-server.cpp
